commit file lan 1

--- a/static/pages/html/index_hanh.html
+++ b/static/pages/html/index_hanh.html
@@ -9,7 +9,7 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <!-- <link rel="stylesheet" href="/db/webbootstrap.css"> -->
-    <link rel="stylesheet" href="/static/pages/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 
